// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`adding adds a new valid experience 1`] = `
Object {
  "errorMessage": "",
  "experiences": Array [
    Object {
      "company": "",
      "companyErrors": Array [],
      "contentErrors": Array [],
      "endDate": "",
      "endDateErrors": Array [],
      "id": "1",
      "position": "",
      "positionErrors": Array [],
      "startDate": "2012-05-20",
      "startDateErrors": Array [],
    },
  ],
  "experiencesErrors": Array [],
  "skills": "",
  "skillsErrors": Array [],
  "status": 1,
  "summary": "",
  "summaryErrors": Array [],
}
`;

exports[`updating updates company fields 1`] = `
Object {
  "errorMessage": "",
  "experiences": Array [
    Object {
      "company": "Parmis",
      "companyErrors": Array [],
      "content": "Description",
      "contentErrors": Array [],
      "endDate": "2015-01-01",
      "endDateErrors": Array [],
      "id": 1,
      "position": "JS",
      "positionErrors": Array [],
      "startDate": "2013-01-02",
      "startDateErrors": Array [],
    },
  ],
  "experiencesErrors": Array [],
  "skills": "",
  "skillsErrors": Array [],
  "status": 1,
  "summary": "",
  "summaryErrors": Array [],
}
`;

exports[`updating validates company fields 1`] = `
Object {
  "errorMessage": "",
  "experiences": Array [
    Object {
      "company": "Parmis",
      "companyErrors": "companyError",
      "content": "Description",
      "contentErrors": "contentError",
      "endDate": "2015-01-01",
      "endDateErrors": "end dateError",
      "id": 1,
      "position": "JS",
      "positionErrors": "positionError",
      "startDate": "2013-01-02",
      "startDateErrors": "start dateError",
    },
  ],
  "experiencesErrors": Array [],
  "skills": "",
  "skillsErrors": Array [],
  "status": 1,
  "summary": "",
  "summaryErrors": Array [],
}
`;
